--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email list</title>
 </head>
-<body>
-    
 
-    <script src="main.js"></script>
+<body>
+
+
+    
+<!-- Axios Script-->
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<!-- My Script-->
+        <script src="main.js"></script>
 </body>
+
 </html>
