--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div class="container mt-3">
         <ul class="list-group list-container">
         </ul>
+
+        <button id="button-new-element" class="btn btn-primary mt-5" type="submit">10 Email Nuove</button>
     </div>
 
 
